--- a/src/app/components/thread/admin-thread-detail-unrouted/admin-thread-detail-unrouted.component.html
+++ b/src/app/components/thread/admin-thread-detail-unrouted/admin-thread-detail-unrouted.component.html
@@ -1,6 +1,5 @@
 <div class="profile">
   <div class="profile-header">
-    <img class="profile-picture" src="../../../../assets/thread.jpg" alt="Foto de perfil">
     <h1>Hilo "{{datos.title}}"</h1>
   </div>
   <div class="profile-details">
@@ -19,5 +18,5 @@
   </div>
 </div>
 <div class="center-button">
-<a class="buttonList" [routerLink]="['/admin', 'thread', 'plist']">Volver a la lista completa</a>
+<a class="buttonList" [routerLink]="['/admin', 'thread', 'plist']">Volver</a>
 </div>
