--- a/src/app/components/reply/admin-reply-detail-unrouted/admin-reply-detail-unrouted.component.html
+++ b/src/app/components/reply/admin-reply-detail-unrouted/admin-reply-detail-unrouted.component.html
@@ -1,6 +1,6 @@
 <div class="profile">
   <div class="profile-header">
-    <img class="profile-picture" src="../../../../assets/reply.jpg" alt="Foto de perfil">
+    
     <h1>Respuesta de {{datos.user.username}}</h1>
   </div>
   <div class="profile-details">
@@ -27,5 +27,5 @@
   </div>
 </div>
 <div class="center-button">
-<a class="buttonList" [routerLink]="['/admin', 'reply', 'plist']">Volver a la lista completa</a>
+<a class="buttonList" [routerLink]="['/admin', 'reply', 'plist']">Volver</a>
 </div>
