--- a/src/app/components/reply/admin-reply-plist-unrouted/admin-reply-plist-unrouted.component.css
+++ b/src/app/components/reply/admin-reply-plist-unrouted/admin-reply-plist-unrouted.component.css
@@ -1,3 +1,21 @@
-a {
-    color: black;
-}
+.menu-container {
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  .custom-table {
+    font-size: 14px;
+  }
+  
+  .menu-title {
+    font-size: 18px;
+    color: #333;
+  }
+  
+  .pagination-container {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
